--- a/projects/perlinNoise/css/styles.css
+++ b/projects/perlinNoise/css/styles.css
@@ -1,26 +1,4 @@
-/** {
-    padding: 0;
-    margin: 0;
-
-    overscroll-behavior-y: none;
-}
-
-html {
-    width: -webkit-fill-available;
-    height: -webkit-fill-available;
-    height: calc(var(--vh, 1vh) * 100);
-
-    box-sizing: border-box;
-}
-
-*, *:before, *:after {
-    box-sizing: inherit;
-}*/
-
 body{
-    /*min-height: 100vh;
-    min-height: calc(var(--vh, 1vh) * 100);*/
-
     padding: 1rem 1rem;
 
     /*overflow-x: hidden;*/
